--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # MySQL
 quarkus.datasource.db-kind=mysql
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/estoque?serverTimezone=UTC
 quarkus.datasource.username=root
 quarkus.datasource.password=1234
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/estoque?createDatabaseIfNotExist=true&serverTimezone=UTC
 
 # Hibernate
 quarkus.hibernate-orm.database.generation=validate
