--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=root
 quarkus.datasource.password=1234
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/estoque?createDatabaseIfNotExist=true&serverTimezone=UTC
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/stock?createDatabaseIfNotExist=true&serverTimezone=UTC
 
 # Hibernate
 quarkus.hibernate-orm.database.generation=validate
